@@ -55,6 +55,7 @@ void SearchEnginesDialog::addEngine()
     SearchEngine engine;
     engine.name = dialog.name();
     engine.url = dialog.url();
+    engine.postData = dialog.postData().toUtf8();
     engine.shortcut = dialog.shortcut();
     engine.icon = SearchEnginesManager::iconForSearchEngine(QUrl::fromEncoded(dialog.url().toUtf8()));
 
@@ -103,6 +104,7 @@ void SearchEnginesDialog::editEngine()
 
     dialog.setName(engine.name);
     dialog.setUrl(engine.url);
+    dialog.setPostData(engine.postData);
     dialog.setShortcut(engine.shortcut);
     dialog.setIcon(engine.icon);
 
@@ -112,6 +114,7 @@ void SearchEnginesDialog::editEngine()
 
     engine.name = dialog.name();
     engine.url = dialog.url();
+    engine.postData = dialog.postData().toUtf8();
     engine.shortcut = dialog.shortcut();
     engine.icon = dialog.icon();
 
